fix footer spacing

--- a/Website/style.css
+++ b/Website/style.css
@@ -87,6 +87,7 @@ html, body {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 10%;
 }
 
 .navbar-dropdown::before {
@@ -121,7 +122,7 @@ html, body {
 }
 
 .container {
-    height: 80%;
+    height: 100%;
     width: 90%;
 }
 .navbar-menu.is-active a.navbar-item,
